--- a/arch/arm64/configs/chiron_defconfig
+++ b/arch/arm64/configs/chiron_defconfig
@@ -1776,6 +1776,12 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_DEV_FORCE=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_GESTURE_FORCE is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_VIDEO_FORCE is not set
 # CONFIG_TOUCH_DEBUG_FS is not set
+CONFIG_TOUCHSCREEN_FT5X46=y
+# CONFIG_TOUCHSCREEN_FT5X46_CALIBRATE is not set
+# CONFIG_TOUCHSCREEN_FT5X46_TYPEB is not set
+CONFIG_TOUCHSCREEN_FT5X46_I2C=y
+# CONFIG_TOUCHSCREEN_FT5X46_SPI is not set
+# CONFIG_TOUCHSCREEN_FT5X46P_PROXIMITY is not set
 CONFIG_OF_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
 # CONFIG_TOUCHSCREEN_AD7877 is not set
