defconfig: Enable SOUND_CONTROL

--- a/arch/arm64/configs/chiron_defconfig
+++ b/arch/arm64/configs/chiron_defconfig
@@ -3000,6 +3000,7 @@ CONFIG_SND_SOC_MSM_STUB=y
 CONFIG_SND_SOC_MSM_HDMI_CODEC_RX=y
 # CONFIG_SND_SOC_SDM660_CDC is not set
 # CONFIG_SND_SOC_MSM_SDW is not set
+CONFIG_SOUND_CONTROL=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
@@ -4285,6 +4286,7 @@ CONFIG_F2FS_FS_SECURITY=y
 CONFIG_FS_POSIX_ACL=y
 CONFIG_FILE_LOCKING=y
 # CONFIG_FS_ENCRYPTION is not set
+# CONFIG_FS_VERITY is not set
 CONFIG_FSNOTIFY=y
 CONFIG_DNOTIFY=y
 CONFIG_INOTIFY_USER=y
